--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form</title>
 </head>
+
 <body>
-    
+    <div class="mainContainer">
+        <div class="mainContainer-left">
+            <div class="mainContainer-left-banner">
+                <img class="mainContainer-left-banner-logo" src="img/logo.png"
+                    alt="a logo of a plane travelling around the world">
+                <div class="mainContainer-left-banner-heading">Travel</div>
+            </div>
+            <footer class="mainContainer-left-footer">Photo by <a href="https://unsplash.com/photos/u9QuzlImpzA"
+                    target="_blank" rel="noopener noreferrer">Arthur Edelmans</a> on <a href="https://unsplash.com"
+                    target="_blank" rel="noopener noreferrer">Unsplash</a></footer>
+        </div>
+        <div class="mainContainer-right">
+            <div class="mainContainer-right-heading">
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize your deepest dreams.<br>Sign up <em>now</em> to get started.<br><br>You <em>know</em> you
+                    want to.</p>
+            </div>
+            <div class="mainContainer-right-form">
+                <p>Let's do this!</p>
+                <div class="mainContainer-right-form-formContainer">
+                <div class="mainContainer-right-form-formContainer-left">
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" id="first-name" name="first-name">
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email" name="email">
+                    <label for="pwd">PASSWORD</label>
+                    <input type="password" id="pwd" name="pwd">
+                </div>
+                <div class="mainContainer-right-form-formContainer-right">
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" id="last-name" name="last-name">
+                    <label for="phone">PHONE NUMBER</label>
+                    <input type="tel" id="phone" name="phone">
+                    <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirm-pwd" name="confirm-pwd">
+
+                </div>
+                </div>
+            </div>
+            <div class="mainContainer-right-buttons">
+
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
