added form tag to wrap form widgets and added a black background to the image credits to improve readability

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="mainContainer-right-form">
                 <p>Let's do this!</p>
                 <div class="mainContainer-right-form-formContainer">
+                    <form action="#" method="post"></form>
                 <div class="mainContainer-right-form-formContainer-left">
                     <label for="first-name">FIRST NAME</label>
                     <input type="text" id="first-name" name="first-name">
