change border color on form widgets when focused and wrapped all form elements under the same form

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             </div>
             <div class="mainContainer-right-form">
                 <p>Let's do this!</p>
-                <div class="mainContainer-right-form-formContainer">
-                    <form action="#" method="post"></form>
+                    <form action="#" class="mainContainer-right-form-formContainer" method="post">
                 <div class="mainContainer-right-form-formContainer-left">
                     <label for="first-name">FIRST NAME</label>
                     <input type="text" id="first-name" name="first-name">
@@ -49,8 +48,7 @@
                     <input type="tel" id="phone" name="phone">
                     <label for="confirm-pwd">CONFIRM PASSWORD</label>
                     <input type="password" id="confirm-pwd" name="confirm-pwd">
-
-                </div>
+                </form>
                 </div>
             </div>
             <div class="mainContainer-right-buttons">
