--- a/index.html
+++ b/index.html
@@ -32,24 +32,26 @@
             </div>
             <div class="mainContainer-right-form">
                 <p>Let's do this!</p>
-                    <form action="#" class="mainContainer-right-form-formContainer" method="post">
-                <div class="mainContainer-right-form-formContainer-left">
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name" name="first-name">
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email">
-                    <label for="pwd">PASSWORD</label>
-                    <input type="password" id="pwd" name="pwd">
-                </div>
-                <div class="mainContainer-right-form-formContainer-right">
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name" name="last-name">
-                    <label for="phone">PHONE NUMBER</label>
-                    <input type="tel" id="phone" name="phone">
-                    <label for="confirm-pwd">CONFIRM PASSWORD</label>
-                    <input type="password" id="confirm-pwd" name="confirm-pwd">
+                <form action="#" class="mainContainer-right-form-formContainer" method="post">
+                    <div class="mainContainer-right-form-formContainer-left">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name" required>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="pwd" >PASSWORD</label>
+                        <input type="password" id="pwd" name="pwd" required>
+                    </div>
+                    <div class="mainContainer-right-form-formContainer-right">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name">
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone" name="phone">
+                        <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm-pwd" name="confirm-pwd" required>
+                    </div>
+                    <button type="submit">let's go</button>
                 </form>
-                </div>
+
             </div>
             <div class="mainContainer-right-buttons">
 
@@ -57,6 +59,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
