--- a/index.html
+++ b/index.html
@@ -32,28 +32,40 @@
             </div>
             <div class="mainContainer-right-form">
                 <p>Let's do this!</p>
-                <form action="#" class="mainContainer-right-form-formContainer" method="post">
-                    <div class="mainContainer-right-form-formContainer-left">
+                <form action="#" class="mainContainer-right-form-formContainer" id="my-form" method="post">
+                    <div class="widget">
                         <label for="first-name">FIRST NAME</label>
                         <input type="text" id="first-name" name="first-name" required>
-                        <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email" required>
-                        <label for="pwd" >PASSWORD</label>
-                        <input type="password" id="pwd" name="pwd" required>
                     </div>
-                    <div class="mainContainer-right-form-formContainer-right">
+                    <div class="widget">
                         <label for="last-name">LAST NAME</label>
                         <input type="text" id="last-name" name="last-name">
+                    </div>
+                    <hr>
+                    <div class="widget">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="widget">
                         <label for="phone">PHONE NUMBER</label>
                         <input type="tel" id="phone" name="phone">
+                    </div>
+                    <hr>
+                    <div class="widget">
+                        <label for="pwd">PASSWORD</label>
+                        <input type="password" id="pwd" name="pwd" required>
+                    </div>
+                    <div class="widget">
                         <label for="confirm-pwd">CONFIRM PASSWORD</label>
                         <input type="password" id="confirm-pwd" name="confirm-pwd" required>
                     </div>
-                    <button type="submit">let's go</button>
                 </form>
 
             </div>
             <div class="mainContainer-right-buttons">
+                <button type="submit" form="my-form">Create Account</button>
+                <div>Already have an account? <a href="#"
+                    target="_blank" rel="noopener noreferrer">Log in</a></div>
 
             </div>
         </div>
